--- a/budget/index2.html
+++ b/budget/index2.html
@@ -72,8 +72,29 @@
             </div>
             <div ng-show="initialSalary != null" ng-controller="expensesController as expenses">
                 <h2>{{expenses.title}}</h2>
-                <div ng-if="!expenses.showExpenseForm">
+                <div ng-if="!expenses.showExpenseForm && expenses.expenses.length > 0">
                     <h4>Expense List</h4>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <tr>
+                                <th>Category</th>
+                                <th>Name</th>
+                                <th>Total Cost</th>
+                                <th>Edit/Delete</th>
+                            </tr>
+                            <tr ng-repeat="expense in expenses.expenses">
+                                <td>{{expense.category}}</td>
+                                <td>{{expense.name}}</td>
+                                <td>{{expense.totalCost | currency}}</td>
+                                <td>
+                                    <button ng-controller="expenseController as expenseCtrl" ng-click="expenses.edit(expense)">Edit</button>
+                                    <button ng-click="expenses.delete(expense.id)">Delete</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+
+
                 </div>
                 <div ng-if="expenses.showExpenseForm" ng-controller="expenseController as expense">
                     <h4>{{expense.title}}</h4>
@@ -115,7 +136,7 @@
                                 <label>How Often Is It Paid?</label>
                             </div>
                             <div class="col-md-3">
-                                <input type="text" class="form-control" ng-model="expense.expenseObj.frequency" placeholder="1 (annually), 12 (monthly), etc." required />
+                                <input type="number" class="form-control" ng-model="expense.expenseObj.frequency" placeholder="1 (annually), 12 (monthly), etc." required />
                             </div>
                         </div>
                         <button ng-click="expenseForm.$valid && expense.save(expense.expenseObj)">Save</button><button ng-click="expenses.cancel()">Cancel</button>
