--- a/budget/index2.html
+++ b/budget/index2.html
@@ -154,6 +154,10 @@
                     <dt class="col-md-4">Before Tax Income</dt>
                     <dd class="col-md-2">{{initialSalary | currency}}</dd>
                 </dl>
+                <dl class="dl-horizontal" ng-repeat="expense in expenses">
+                    <dt class="col-md-4">{{expense.category}}:{{expense.name}}</dt>
+                    <dd class="col-md-2">{{expense.totalCost | currency}}</dd>
+                </dl>
                 <hr class="col-xs-12 col-md-6">
                 <dl class="dl-horizontal">
                     <dt class="col-md-4">Final Income</dt>
