--- a/budget/salary-form.html
+++ b/budget/salary-form.html
@@ -1,17 +1,17 @@
 <div ng-controller="salaryController as salary">
     <h2>{{salary.title}}</h2>
     <form class="form-horizontal" name="salaryForm" novalidate>
-        <div class="form-group">
+        <div class="form-group" ng-class="{'has-error': salaryForm.salary.$invalid && salaryForm.salary.$dirty}">
                 <label class="control-label col-md-4">What Is Your Annual Income?</label>
             <div class="col-md-4">
                 <div class="input-group">
                     <div class="input-group-addon">$</div>
-                    <input type="number" name="salary.form.salary" min="0" class="form-control" placeholder="amount"
+                    <input type="number" name="salary" min="0" class="form-control" placeholder="amount"
                            ng-model="salary.form.initialSalary" required/>
                 </div>
             </div>
         </div>
-        <div class="form-group" ng-class="{'has-error': salaryForm.status.$invalid}">
+        <div class="form-group" ng-class="{'has-error': salaryForm.status.$invalid && salaryForm.status.$dirty}">
                 <label class="control-label col-md-4">What Is Your Tax Filing Status?</label>
             <div class="col-md-4">
                 <select class="form-control" ng-model="salary.form.filingStatus" name="status" required>
@@ -21,7 +21,7 @@
                 </select>
             </div>
         </div>
-        <div class="form-group" ng-class="{'has-error': salaryForm.state.$invalid}">
+        <div class="form-group" ng-class="{'has-error': salaryForm.state.$invalid && salaryForm.state.$dirty}">
                 <label class="control-label col-md-4">Which State Do You Live In?</label>
             <div class="col-md-4">
                 <select class="form-control" ng-model="salary.form.state" name="state" required>
@@ -29,7 +29,7 @@
                 </select>
             </div>
         </div>
-        <button ng-show="!salary.salaryFormSubmitted" ng-click="salary.save(salary.form)">Save</button>
-        <button ng-show="salary.salaryFormSubmitted" ng-click="salary.edit(salary.form)">Edit</button>
+        <button class="btn btn-success" ng-show="!salary.salaryFormSubmitted" ng-click="salaryForm.salary.$valid && salary.save(salary.form)">Save</button>
+        <button class="btn btn-success" ng-show="salary.salaryFormSubmitted" ng-click="salary.edit(salary.form)">Edit</button>
     </form>
 </div>
