added file to hold state options and added additional comments in index file

--- a/budget/index.html
+++ b/budget/index.html
@@ -17,9 +17,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+    <!-- underscore -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <!-- angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
+   <!-- my code -->
+    <script src="js/state-options.js"></script>
     <script src="js/controller/app.js"></script>
 </head>
 <body ng-cloak ng-controller="incomeController as income">
