added file to hold filing status options

--- a/budget/index.html
+++ b/budget/index.html
@@ -23,6 +23,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
    <!-- my code -->
+    <script src="js/filing-status-options.js"></script>
     <script src="js/state-options.js"></script>
     <script src="js/controller/app.js"></script>
 </head>
